--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "fontawesome": "^5.6.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
