--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "css-loader": "^6.7.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "ts-loader": "^9.3.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
